@@ -2,6 +2,8 @@
 --- TBD: Unreleased ---
     * Fixed so that the written binary file is always consistent (i.e.
       if a simulation aborts, it can still be read)
+    * Changed default loading strategiy for binary files, now the
+      trajectories are loaded on demand instead of all at the same time.
     * Fixed so that .initial is set properly on ScalarVariable2.
     * Fixed get_variable_nominal when called for valueref of variable.
     
